@@ -1,3 +1,7 @@
+Important changes from 1.6.4 => 1.6.5
+============================================================
+Improved security means users may get error warnings when opening the same form in two windows.
+
 Important changes from 1.6.3 => 1.6.4
 ============================================================
 Errors in token events are less likely to cause the application to halt
